kube/media/radarr/radarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      annotations:
        fluentbit.io/parser: "radarr"
        diun.enable: "true"
      labels:
        app.kubernetes.io/name: radarr
    spec:
      terminationGracePeriodSeconds: 15

      restartPolicy: Always
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: data
        nfs: # data folder is a mounted pre-existing NFS share, *not* a PV/PVC
          server: 192.168.1.200
          path: /volume1/Media
      containers:
      - env:
        - name: TZ
          value: America/New_York
        - name: PUID
          value: '222'
        - name: PGID
          value: '321'
        - name: UMASK
          value: '002'
        
        # https://registry.hub.docker.com/r/linuxserver/radarr/tags
        image: linuxserver/radarr:6.2.1
        imagePullPolicy: IfNotPresent
        name: radarr
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 768Mi
        ports:
        - containerPort: 7878
          name: http
          protocol: TCP
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: radarr-config
